# OpenglAppSandbox

./: CMakeLists.txt  main.cpp
src/core/: IScene.h
src/core/application/: Application.cpp  Application.h  Shader.cpp  Shader.h  input_event_type.h
src/core/math/: Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
src/scene/: BaseScene.cpp  BaseScene.h
src/utils/: logger.h  types.h
